블로그 아이콘 변경, history 아이콘 변경

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <div class="row">
                     	<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2020-05</h6>
                                 </div>
@@ -330,7 +330,7 @@
                         </div>
                     	<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2020-04</h6>
                                 </div>
@@ -344,7 +344,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2019-12</h6>
                                 </div>
@@ -359,7 +359,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2019-10</h6>
                                 </div>
@@ -370,7 +370,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2019-09</h6>
                                 </div>
@@ -383,7 +383,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2019-08</h6>
                                 </div>
@@ -394,7 +394,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2019-07</h6>
                                 </div>
@@ -405,7 +405,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2019-06</h6>
                                 </div>
@@ -418,7 +418,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2019-04</h6>
                                 </div>
@@ -429,7 +429,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2019-02</h6>
                                 </div>
@@ -441,7 +441,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2019-01</h6>
                                 </div>
@@ -452,7 +452,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2018-12</h6>
                                 </div>
@@ -464,7 +464,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-world"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2018-09</h6>
                                 </div>
@@ -475,7 +475,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-layout-media-left"></span></div>
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
                                     <h6>2018-08</h6>
                                 </div>
@@ -891,7 +891,7 @@
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="https://www.facebook.com/APLYPLATFORM"><i class="fab fa-facebook-f"></i></a></li>
-					    <li><a href="https://blog.aply.biz"><img src="assets/images/blog_icon.png" width="18"></a></li>
+					    <li><a href="https://blog.aply.biz"><span class="ti-rss"></a></li>
 					    <li><a href="https://kr.linkedin.com/company/aplyplatform"><i class="fab fa-linkedin"></i></a></li>
 					    <li></li>
                                             <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="230" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
