도로시 협약 내용 추가

--- a/index.html
+++ b/index.html
@@ -334,6 +334,17 @@
                         </div>
                     </div>
                     <div class="row">
+		<div class="col-lg-4 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2020-05</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>주식회사 도로시와 업무 협약</p>
+                                </div>
+                            </div>
+                        </div>
                     	<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
@@ -341,8 +352,7 @@
                                     <h6>2020-05</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>
-                                    드론메이커스협동조합과 제휴 협약,<br>
+                                    <p>드론메이커스협동조합과 업무 협약,<br>
 			                              제주지사 설립</p>
                                 </div>
                             </div>
@@ -371,7 +381,7 @@
                                     <p>
                                     제주국제자유도시개발센터(JDC) 주최 / 엠와이소셜컴퍼니(MYSC) 기획/운영 - 사회적소셜벤처지원사업 '낭그늘'사업 인큐베이팅 선정,<br>
                         				    제주창조경제혁신센터 시드투자 유치,<br>
-							                      한국메이커스협동조합'나래'와 제휴협약
+							                      한국메이커스협동조합'나래'와 업무협약
                         				    </p>
                                 </div>
                             </div>
@@ -394,7 +404,7 @@
                                     <h6>2019-09</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>문화기획사 스몰데이즈와 제휴협약,<br>
+                                    <p>문화기획사 스몰데이즈와 업무협약,<br>
                         				    제주 스타트업베이 중장년기술창업 지원사업 선정,<br>
                         				    제주 창조경제혁신센터 보육기업 협약</p>
                                 </div>
@@ -430,8 +440,8 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>특허청 지식재산권창출 지원사업 선정,<br>
-                                    제주 이슬농원 송광호님과 제휴협약,<br>
-                                    가톨릭관동대학교와 제휴협약</p>
+                                    제주 이슬농원 송광호님과 업무협약,<br>
+                                    가톨릭관동대학교와 업무협약</p>
                                 </div>
                             </div>
                         </div>
@@ -442,7 +452,7 @@
                                     <h6>2019-04</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>청년농부 여정구님과 제휴협약</p>
+                                    <p>청년농부 여정구님과 업무협약</p>
                                 </div>
                             </div>
                         </div>
@@ -453,8 +463,8 @@
                                     <h6>2019-02</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>체리픽웍스(주)와 제휴협약,<br>
-                                      청년농부 김현승님과 제휴협약</p>
+                                    <p>체리픽웍스(주)와 업무협약,<br>
+                                      청년농부 김현승님과 업무협약</p>
                                 </div>
                             </div>
                         </div>
@@ -465,7 +475,7 @@
                                     <h6>2019-01</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>강원도립대와 제휴협약</p>
+                                    <p>강원도립대와 업무협약</p>
                                 </div>
                             </div>
                         </div>
@@ -477,7 +487,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>기술보증기금 자금유치,<br>
-                                      청년농부 이호승님과 제휴협약</p>
+                                      청년농부 이호승님과 업무협약</p>
                                 </div>
                             </div>
                         </div>
@@ -595,6 +605,13 @@
                     </div>
 
                 		<div class="row">
+				<div class="col-lg-4 col-md-6">
+		                            <div class="icon-box icon-box-left">
+		                                <div class="icon-box-title">
+		                                    <p><a href="http://dorosee.kr/" target=new>도로시</a></p>
+		                                </div>
+		                            </div>
+		                    </div>
                 		    <div class="col-lg-4 col-md-6">
 		                            <div class="icon-box icon-box-left">
 		                                <div class="icon-box-title">
@@ -642,7 +659,7 @@
 		                            </div>
 		                		</div>
 
-                        <div class="col-lg-4 col-md-6">
+                        		<div class="col-lg-4 col-md-6">
 		                            <div class="icon-box icon-box-left">
 		                                <div class="icon-box-title">
                                     	<p><a href="https://www.facebook.com/smalldays4u" target=new>스몰데이즈</a></p>
