띄어쓰기 수정

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                     <h6>2020-05</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>주식회사 도로시와 업무 협약</p>
+                                    <p>주식회사 도로시와 업무협약</p>
                                 </div>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                                     <h6>2020-05</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>드론메이커스협동조합과 업무 협약,<br>
+                                    <p>드론메이커스협동조합과 업무협약,<br>
 			                              제주지사 설립</p>
                                 </div>
                             </div>
@@ -441,7 +441,7 @@
                                 <div class="icon-box-content">
                                     <p>특허청 지식재산권창출 지원사업 선정,<br>
                                     제주 이슬농원 송광호님과 업무협약,<br>
-                                    가톨릭관동대학교와 업무협약</p>
+                                    가톨릭관동대학교와 제휴협약</p>
                                 </div>
                             </div>
                         </div>
@@ -475,7 +475,7 @@
                                     <h6>2019-01</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>강원도립대와 업무협약</p>
+                                    <p>강원도립대와 제휴협약</p>
                                 </div>
                             </div>
                         </div>
