--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 				<div class="col-lg-4 col-md-6">
 		                            <div class="icon-box icon-box-left">
 		                                <div class="icon-box-title">
-		                                    <p><a href="http://dorosee.kr/" target=new>도로시</a></p>
+		                                    <p><a href="http://dorosee.kr/" target=new>(주)도로시</a></p>
 		                                </div>
 		                            </div>
 		                    </div>
