AIR ON과 협약 기록 추가

--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
                                     <h6>2020-07</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>주식회사 도로시와 업무협약</p>
+                                    <p>주식회사 도로시와 업무협약,<br>
+			AIR ON과 업무협약</p>
                                 </div>
                             </div>
                         </div>
@@ -605,6 +606,13 @@
                     </div>
 
                 		<div class="row">
+				<div class="col-lg-4 col-md-6">
+		                            <div class="icon-box icon-box-left">
+		                                <div class="icon-box-title">
+		                                    <p><a href="https://blog.naver.com/habarose" target=new>AIR ON</a></p>
+		                                </div>
+		                            </div>
+		                    </div>
 				<div class="col-lg-4 col-md-6">
 		                            <div class="icon-box icon-box-left">
 		                                <div class="icon-box-title">
