--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
                         	<div class="accordion" id="accordion1">
 	                        		<div class="accordion-item">
 														       <div class="accordion-item-header">
-														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1">Drone Technology</a></h6>
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1">Drone, Everywhere</a></h6>
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
-														              <p>드론의 비행 계획, 자동 비행과 관련한 쉬운 사용성으로 각종 드론활동에 도움이 되는 기술을 제공합니다.<br>드론을 전혀 모르는 초보자도 드론을 쉽게 제어 하거나 활용 할 수 있는 다양한 방법을 연구합니다.</p>
+														              <p>드론의 비행계획, 자동비행을 쉽게 할 수 있는 기술을 제공합니다.<br>드론을 전혀 모르는 초보자도 드론을 안전하고 쉽게 제어 하거나 활용 할 수 있도록 다양한 서비스와 방법을 연구합니다.</p>
 														          </div>
 														       </div>
 														  </div>
@@ -178,11 +178,11 @@
                         	<div class="accordion" id="accordion2">
                             <div class="accordion-item">
 													       <div class="accordion-item-header">
-													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2">Big data, AI Technology</a></h6>
+													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2">Vision, AR, Bigdata, AI</a></h6>
 													       </div>
 													       <div class="collapse show" id="collapse-2" data-parent="#accordion2">
 													          <div class="accordion-item-body">
-													              <p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다.<br>영상 데이터 분석과 처리(Vision), 이상탐지(Anomaly Detection)기술을 활용하여 좀 더 쉽게 문제를 확인하거나 인사이트를 얻을 수 있는 방법을 연구합니다.</p>
+													              <p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다.<br>영상 데이터 분석과 처리, 이상탐지(Anomaly Detection), AR 기술등을 활용하여 좀 더 쉽게 문제를 확인하거나 인사이트를 얻을 수 있는 방법을 연구합니다.</p>
 													          </div>
 													       </div>
 													  </div>
