--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
-														              <p>드론의 비행계획, 자동비행을 쉽게 할 수 있는 기술을 제공합니다.<br>드론을 전혀 모르는 초보자도 드론을 안전하고 쉽게 제어 하거나 활용 할 수 있도록 다양한 서비스와 방법을 연구합니다.</p>
+														              <p>드론의 비행계획, 자동비행을 쉽게 할 수 있는 기술을 제공합니다.<br>드론을 전혀 모르는 초보자도 일상에서 드론을 안전하고 쉽게 제어 하거나 활용 할 수 있도록 다양한 서비스와 방법을 연구합니다.</p>
 														          </div>
 														       </div>
 														  </div>
@@ -182,7 +182,7 @@
 													       </div>
 													       <div class="collapse show" id="collapse-2" data-parent="#accordion2">
 													          <div class="accordion-item-body">
-													              <p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다.<br>영상 데이터 분석과 처리, 이상탐지(Anomaly Detection), AR 기술등을 활용하여 좀 더 쉽게 문제를 확인하거나 인사이트를 얻을 수 있는 방법을 연구합니다.</p>
+													              <p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다.<br>영상 데이터 분석과 처리, 이상탐지(Anomaly Detection), AR 기술등을 활용하여 좀 더 쉽게 문제를 확인하거나 인사이트를 얻을 수 있는 방법을 연구하고 개발합니다.</p>
 													          </div>
 													       </div>
 													  </div>
