--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         </div>
                         <div class="col-lg-6 offset-lg-1">
                             <h5>APLY가 개발중인 앱과 서비스</h5>
-                            <p class="lead">AI, 빅데이터, 경량 드론을 활용한 시설모니터링 및 재미있는 감성 소통 서비스를 연구하고 개발합니다.</p>
+                            <p class="lead">AI, 빅데이터, 경량 드론을 활용한 시설모니터링 및 드론 서비스 중개 플랫폼과 재미있는 감성 소통 서비스를 연구하고 개발합니다.</p>
                         </div>
 
                         <div class="col-lg-6 col-md-6">
