앱소와 업무협약 - history 에 추가

--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>주식회사 도로시와 업무협약,<br>
-			AIR ON과 업무협약</p>
+			AIR ON과 업무협약,<br>
+			주식회사 앱소와 업무협약</p>
                                 </div>
                             </div>
                         </div>
