droneplay > duni 로 수정

--- a/index.html
+++ b/index.html
@@ -854,18 +854,18 @@
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
-                                    <a href="https://top.droneplay.io/" target="new">DronePlay</a>
+                                    <a href="https://pilot.duni.io/" target="new">DUNI PILOT</a>
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
                                     드론을 세계일주 시키자!
                         				    </p>
                         				    <p>
-                        				    드론 초보 탈출기부터 멋진 경관을 촬영했던 비행영상을 공유합니다. 비행기록을 비행계획으로 변환하거나 현재 위치를 기록하기 위한 기술도 제공합니다.
+                        				    멋진 경관을 촬영했던 비행영상과 비행기록을 확인할 수 있으며 드론SW 개발을 위한 기술을 제공하는 커뮤니티 입니다.
                         				    </p>
                         				  	<p>
                                     	<a href="https://top.droneplay.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
-                                    	<a href="https://www.facebook.com/groups/droneplay/" target="new"><i class="ti-facebook"></i></a>
+                                    	<a href="https://www.facebook.com/groups/dunipilot/" target="new"><i class="ti-facebook"></i></a>
                                   	</p>
                                 </div>
                             </div>
