--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
-														              <p>드론의 비행계획, 자동비행을 쉽게 할 수 있는 기술을 제공합니다.<br>드론을 전혀 모르는 초보자도 일상에서 드론을 안전하고 쉽게 제어 하거나 활용 할 수 있도록 다양한 서비스와 방법을 연구합니다.</p>
+														              <p>드론의 비행계획, 자동비행을 쉽게 디자인 할 수 있는 기술을 제공합니다.<br>드론을 전혀 모르는 초보자도 일상에서 드론을 쉽게 안전하게 활용 할 수 있도록 다양한 방법과 서비스를 연구합니다.</p>
 														          </div>
 														       </div>
 														  </div>
