--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 													       </div>
 													       <div class="collapse show" id="collapse-2" data-parent="#accordion2">
 													          <div class="accordion-item-body">
-													              <p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다.<br>영상 데이터 분석과 처리, 이상탐지(Anomaly Detection), AR 기술등을 활용하여 좀 더 쉽게 문제를 확인하거나 인사이트를 얻을 수 있는 방법을 연구하고 개발합니다.</p>
+													              <p>데이터를 이해하고, 가치를 발굴하고, 인공지능을 디자인 합니다.<br>AR, 드론의 영상 데이터 분석, 이상탐지(Anomaly Detection) 기술을 활용하여 좀 더 간편하게 문제를 확인하고 인사이트를 얻을 수 있는 방법을 연구합니다.</p>
 													          </div>
 													       </div>
 													  </div>
