--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 
         <!-- Web Fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300|Poppins:400,500,600%7cPlayfair+Display:400i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300|Roboto:300|Poppins:400,500,600%7cPlayfair+Display:400i" rel="stylesheet">
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
         <!-- Plugins-->
         <link href="assets/css/plugins.min.css" rel="stylesheet">
@@ -227,8 +227,7 @@
                             <p class="m-b-30"><img src="assets/images/main/products.png" alt=""></p>
                         </div>
                         <div class="col-lg-6 offset-lg-1">
-                            <h5>APLY가 개발중인 앱과 서비스</h5>
-                            <p class="lead">AI, 빅데이터, 경량 드론을 활용한 시설모니터링 및 드론 서비스 중개 플랫폼과 재미있는 감성 소통 서비스를 연구하고 개발합니다.</p>
+                            <h5>APLY가 개발중인 앱과 서비스</h5>                            
                         </div>
 
                         <div class="col-lg-6 col-md-6">
@@ -239,7 +238,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    드론, 센서박스등을 활용하여 시설물 및 논/밭의 상태를 모니터링 하는 서비스
+                                    경량 드론을 활용한 농사시설물 모니터링 서비스
                         				    </p>
                         				  	<p>
                                       <a href="https://dromi.aply.biz" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
@@ -257,7 +256,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    논/밭의 이야기를 담는 감성 브랜딩 서비스
+                                    논/밭의 진솔한 이야기를 담는 감성 브랜딩 서비스
                         				    </p>
                         				  	<p>
                                       <a href="https://drdr.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
@@ -276,7 +275,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    지인 또는 친구에게 심박패턴을 전달하는 감성 서비스 및 디바이스
+                                    친구에게 심박패턴을 전달하는 감성 서비스
                         				    </p>
                         				  	<p>
                         				  		<a href="https://dkdk.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
@@ -295,7 +294,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    드론 서비스가 필요한 주체와 드론 서비스를 제공할 수 있는 주체를 연결하는 스마트한 플랫폼
+                                    스마트한 드론 서비스 중개 플랫폼
                         				    </p>
                         				  	<p>
                         				  		<a href="https://duni.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
