가장 하단 문구 수정

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <meta property="og:image" content="https://www.aply.biz/assets/images/site_title.png"/>
         <meta property="og:url" content="https://www.aply.biz"/>
         <meta property="og:site_name" content="APLY"/>
-        <meta property="og:description" content="재미있게 일하기 위한 진보된 플랫폼"/>
+        <meta property="og:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요!"/>
         <title>주식회사 어플라이 | APLY - Advanced platform to fly</title>
         <meta name="keywords" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
         <meta name="description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
@@ -929,7 +929,7 @@
                                         <a href="#"><font color=white><p><B>APLY Inc.</B></p></font></a>
                                     </div>
                                     <div class="textwidget">
-                                        <p>보다 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
+                                        <p>즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                         <p>
                                             Head Office: 11F, 27, Teheran-ro 2-gil, Gangnam-gu, Seoul, Korea / 06241<hr>
 			        Branch Office: 330, Cheomdan-ro, Jeju-si, Jeju-do, Korea / 63309<hr>
