벤처기업 인증 내용 추가

--- a/index.html
+++ b/index.html
@@ -337,6 +337,17 @@
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
+                                    <h6>2020-08</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>벤처기업 인증<p>
+                                </div>
+                            </div>
+                        </div>
+		<div class="col-lg-4 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                                <div class="icon-box-title">
                                     <h6>2020-07</h6>
                                 </div>
                                 <div class="icon-box-content">
