채용 페이지 추가

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                             </li>
                             <li><a href="https://blog.aply.biz" target="new"><span class="menu-item-span">BLOG</span></a>
                             </li>
+                            <li><a href="recruit.html"><span class="menu-item-span">RECRUIT</span></a>
+                            </li>
 
                         </ul>
                     </div>
@@ -947,6 +949,7 @@
                                             E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                             Phone: +82-2-6956-0801<br>
                                             Fax: +82-2-2135-5351<br>
+                                            <a href="recruit.html"><span class="menu-item-span">RECRUIT ></span></a>                            								
                                         </p>
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
@@ -978,6 +981,10 @@
                                     <ul>
                                         <li><a href="https://dkdk.io" target=_new><img src="assets/images/widgets/1.png" alt="두근두근" style="height:25px;width:70px"></a></li>
                                         <li><a href="https://duni.io" target=_new><img src="assets/images/widgets/4.png" alt="두니" style="height:20px;width:70px"></a></li>
+                                    </ul>
+                                    <ul>
+                                        <li><a href="https://pilot.duni.io/center" target=_new><img src="assets/images/widgets/4.png" alt="두니" style="height:15px;width:60px"><b>PILOT Center</b></a></li>
+                                        <li><a href="https://developer.duni.io" target=_new><img src="assets/images/widgets/4.png" alt="두니" style="height:15px;width:60px"><b>Developer</b></a></li>
                                     </ul>
                                 </aside>
                             </div>
