리크루트 위치 변경

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             </li>
                             <li><a href="https://blog.aply.biz" target="new"><span class="menu-item-span">BLOG</span></a>
                             </li>
-                            <li><a href="recruit.html"><span class="menu-item-span">RECRUIT</span></a>
+                            <li><a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a>
                             </li>
 
                         </ul>
