--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
                                             E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                             Phone: +82-2-6956-0801<br>
                                             Fax: +82-2-2135-5351<br>
-                                            <a href="recruit.html"><span class="menu-item-span">RECRUIT ></span></a>                            								
+                                            <a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a>
                                         </p>
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
