--- a/recruit/index.html
+++ b/recruit/index.html
@@ -145,11 +145,10 @@
 							</div>
             </div>
 
-						<!-- Modal-->
             <section class="module bg-white">
                 <div class="container">
-                    <div class="row align-items-center">
-                        <img src="../assets/images/recruit/recruit.jpg" border=0>
+	        <div class="col-md-12 text-center">
+                        <img src="../assets/images/recruit/recruit.jpg" border="0" style="width:70%;">
                     </div>
                 </div>
             </section>
