--- a/recruit/index.html
+++ b/recruit/index.html
@@ -87,26 +87,25 @@
         <header class="header header-transparent">
             <div class="container-fluid">
                 <!-- Brand-->
-                <div class="inner-header"><a class="inner-brand" href="index.html"><img src="../assets/images/logo.png" border=0 width=70></a></div>
+                <div class="inner-header"><a class="inner-brand" href="../index.html"><img src="../assets/images/logo.png" border=0 width=70></a></div>
                 <!-- Navigation-->
                 <div class="inner-navigation collapse">
                     <div class="inner-nav">
                         <ul>
-                            <li><a href="#"><span class="menu-item-span">MAIN</span></a>
+                            <li><a href="../index.html"><span class="menu-item-span">MAIN</span></a>
                             </li>
-                            <li><a href="#section-about"><span class="menu-item-span">BUSINESS</span></a>
+                            <li><a href="../index.html#section-about"><span class="menu-item-span">BUSINESS</span></a>
                             </li>
-                            <li><a href="#section-history"><span class="menu-item-span">HISTORY</span></a>
+                            <li><a href="../index.html#section-history"><span class="menu-item-span">HISTORY</span></a>
                             </li>
-                            <li><a href="#section-team"><span class="menu-item-span">TEAM</span></a>
+                            <li><a href="../index.html#section-team"><span class="menu-item-span">TEAM</span></a>
                             </li>
-                            <li><a href="#section-location"><span class="menu-item-span">LOCATION</span></a>
+                            <li><a href="../index.html#section-location"><span class="menu-item-span">LOCATION</span></a>
                             </li>
                             <li><a href="https://blog.aply.biz" target="new"><span class="menu-item-span">BLOG</span></a>
                             </li>
                             <li><a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a>
                             </li>
-
                         </ul>
                     </div>
                 </div>
