두니 서비스 추가

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -352,8 +352,8 @@
                                         <li><a href="https://duni.io" target=_new><img src="../assets/images/widgets/4.png" alt="두니" style="height:20px;width:70px"></a></li>
                                     </ul>
                                     <ul>
-                                        <li><a href="https://pilot.duni.io/center" target=_new><img src="../assets/images/widgets/4.png" alt="두니" style="height:15px;width:60px"><b>PILOT Center</b></a></li>
-                                        <li><a href="https://developer.duni.io" target=_new><img src="../assets/images/widgets/4.png" alt="두니" style="height:15px;width:60px"><b>Developer</b></a></li>
+                                        <li><a href="https://pilot.duni.io/center" target=_new><img src="assets/images/widgets/4.png" alt="두니" style="height:15px;width:60px"><br><b>PILOT Center</b></a></li>
+                                        <li><a href="https://developer.duni.io" target=_new><img src="assets/images/widgets/4.png" alt="두니" style="height:15px;width:60px"><br><b>Developer</b></a></li>
                                     </ul>
                                 </aside>
                             </div>
