리크루트 페이지의 설명 추가

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -157,9 +157,17 @@
 
             <section class="module bg-white">
                 <div class="container">
-	        					<div class="col-md-12 text-center">	        							
-                        <img id="imageresource" src="../assets/images/recruit/recruit.jpg" border="0" style="width:70%;">                          
-                    </div>
+		<div class="col-md-12 text-center">	        							
+            	            <img id="imageresource" src="../assets/images/recruit/recruit.jpg" border="0" style="width:70%;">                          
+	            </div>
+
+		<div class="col-md-12 text-center">
+			<h4 class="ml15">
+				<br>
+			  <span class="word">홈페이지, ppt 등 본인을 가장 잘 나타낼 수 있는 자료를 아래 주소로 보내주세요.</span><br>
+			  <span class="word"><a href=mailto:recruit@aply.biz>recruit@aply.biz</a></span>
+			</h4>
+		</div>
                 </div>
             </section>
            
