서비스명 정리

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-vector"></span></div>
                                 <div class="icon-box-title">
-                                    <a href="https://dromi.aply.biz">드로미 (DROMI)</a>
+                                    <a href="https://dromi.aply.biz">DROMI</a>
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
@@ -292,7 +292,7 @@
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-gallery"></span></div>
                                 <div class="icon-box-title">
-                                    <a href="https://drdr.io" target="new">두런두런 (DRDR)</a>
+                                    <a href="https://drdr.io" target="new">두런두런</a>
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
@@ -311,7 +311,7 @@
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-heart-broken"></span></div>
                                 <div class="icon-box-title">
-                                    <a href="https://dkdk.io" target="new">두근두근 (DKDK)</a>
+                                    <a href="https://dkdk.io" target="new">두근두근</a>
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
